# rarefan

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  build_local.sh  config.py  dbgenv.sh  displayREPINsAndRAYTs.R  dl_chlororaphis.sh  dl_zenodo.sh  environment.yml  memon.sh  patch  patch_mac  pkg-build.sh  project.ini  rarefan.spec  run.py  run_app.R  run_docker_test.sh  run_slurm_test.sh  run_test.sh  script.sh  setenv.sh
.github/workflows/: mac_latest.yml  test_cli.yml  ubuntu_latest.yml  win_latest.yml
CI/: build.sh  e2e.sh  push_to_OC.sh  test.sh
REPIN_ecology/: .project
REPIN_ecology/REPIN_ecology/: .classpath  .project  build.gradle  settings.gradle
REPIN_ecology/src/REPINpopulations/: DeterminePopulationFrequencies.java
REPIN_ecology/src/blastTools/: BlastToArtemis.java  BuildBlastAlignment.java  PerformBlast.java  PullOutQueryRegion.java  ReadBlast.java  Reciprocal_BestHits.java
REPIN_ecology/src/ecoliREP/: AnalyseForRecombinations.java  AnalyseResList.java  AnnotateDeletions.java  BlastAll300bpPieces.java  BlastAllExtragenicSpaceFlankingSequences.java  BlastREPs.java  ConstantREPs.java  GetREPdifference.java  Infos.java  MakeRecombinationEventMatrix.java  Matches.java
REPIN_ecology/src/extragenicSequenceSimulation/: MutatedSequenceOccurrences.java
REPIN_ecology/src/frequencies/: CalculateConstantSites.java  ConvertToREPIN.java  RAYTfrequencyGraph.java  REPINProperties.java  RemoveGaps.java
analysis/: app.R
app/: __init__.py  bp.py  config.py  config_template.py  models.py  routes.py  template_filters.py  views.py
app/callbacks/: callbacks.py
app/static/: RAREFAN_Manual.fld
app/tasks/: email.py  rarefan.py  rayt_phylo.py  redis_tests.py  tree.py  zip.py
app/templates/: RAREFAN_Manual.html  base.html  email.md  files.html  index.html  manual.html  report.html  results.html  results_query.html  submit.html  upload.html
app/utilities/: __init__.py  check_errors.py  checkers.py  rarefan  rarefan.py  rarefan_cli.py  rarefan_plots.sh  run_muscle.R
data/: neisseria_large  yafM_Ecoli.faa
data/neisseria/: Ngon_NCCP11945.fas  Ngon_NG-k51_05.fas  Ngon_NJ1711654.fas  Ngon_RIVM0640.fas  Ngon_TFG-B2.fas  Nmen_11-14.fas  Nmen_8013.fas
data/neisseria_small_mixed/: Nmen_2594.fastn  Nmen_38277.fas
data/neisseria_small_with_tree/: Nmen_14-563.fas
data/neisseria_small_with_tree_with_rayt/: Nmen_331401.fas
data/testdata/: Ngon_TFG-A2.fas  Nmen_053442.fas  Nmen_06-178.fas  Nmen_09-292.fas  Nmen_12-176.fas  Nmen_12-221.fas  Nmen_12-330.fas  Nmen_13-600.fas  Nmen_510612.fas  Nmen_95-134.fas
doc/: RAREFAN_Manual.docx  RAREFAN_Manual.html  files_readme.md  parse_file_readme.ipynb
doc/RAREFAN_Manual.fld/: filelist.xml  image006.emz  image013.emz
docker/: Dockerfile
notebooks/: gui.ipynb
profiling/: mem_large.txt
profiling/datasets/: profiling.sh  profiling_analysis.ipynb
shinyapps/analysis/: analysis.R  run_analysis.R  server.R  test_plotting.R  ui.R
test/data/: NMAA_0235.faa  yafM_SBW25.faa
test/md5/: chlororaphis.md5  neisseria.md5  neisseria_small.md5
test/scripts/: dl_zenodo.sh  test.sh  test_chlororaphis.sh
test/unittest/: test_routes.py  test_tasks.py  test_utilities.py
(+209 files in other folders)
